# TwoPointMeasurement

./: app.py  main.py  pyproject.toml  requirements.txt  requirements.txt.txt  zipfile.py
data/: M10H2_IV.txt  M10H2cc_2-Point.txt  M8A_2-Point.txt  index.html  index.txt
data/20231114/: data plot_Initail_curves.py
data/20231114/A1/: Initial sweep_forward#1.xlsx
data/20231114/A2/: Initial resistance#1.xlsx  Initial sweep_forward#1.xlsx  ~$Initial sweep_forward#1.xlsx
data/20231114/A3/: Initial resistance#1.xlsx  Initial sweep_forward#1.xlsx
data/20231114/A4/: Initial resistance#1.xlsx  Initial sweep_forward#1.xlsx
data/20231114/B1/: Initial resistance#1.xlsx  Initial sweep_forward#1.xlsx
data/20231114/B2/: Initial resistance#1.xlsx  Initial sweep_forward#1.xlsx
data/20231114/B3/: Initial resistance#1.xlsx  (+1 more)
extracted_files/: dissertation.tex  references.bib
extracted_files/chapters/: Chapter10.tex  Chapter4.tex  Chapter5.tex  Chapter6.tex  chapter1_introduction.tex  chapter2_theory.tex  cheat sheet.tex  teaching_hiva.tex
extracted_files/frontmatter/: abstract.tex  personalize.tex
two_point/: IDoff.py  Inverter.py  andpulldown.py  andpullup.py  delaytime.py  delaytime_app.py  gain_inverter_calc.py  inverter_main.py  inverterpulldown.py  inverterpullup.py  ioffmean.py  logicgate.py  main.py  main_diode.py  main_vth.py  nandpulldown.py  nandpullup.py  norpulldown.py  norpullup.py  orpulldown.py  orpullup.py  test1.py  testtime.py  testtime1.py  th_v.py  two_points.py  two_points_copy.py  xor.py  xorpulldown.py  xorpullup.py
~/: .bashrc
(+54 files in other folders)
