[tool.poetry]
name = "two-point"
version = "0.1.0"
description = ""
authors = ["Hiva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
openpyxl = "^3.1.2"
scipy = "^1.11.4"
statistics = "^1.0.3.5"
streamlit = "^1.29.0"
plotly = "^5.19.0"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
